[gd_scene load_steps=12 format=3 uid="uid://buj7g0kdkywyt"]

[ext_resource type="Script" uid="uid://b4h3excicddvf" path="res://GUI/Inventory/inventory.gd" id="1_btv15"]
[ext_resource type="Texture2D" uid="uid://bkptflthtg4he" path="res://Sprites/Untitled 39.png" id="2_ewc0g"]
[ext_resource type="PackedScene" uid="uid://cuv6ed6yntyvs" path="res://GUI/Inventory/inventory_slot.tscn" id="3_lgn1t"]
[ext_resource type="Script" uid="uid://da20w1rpa8yuy" path="res://GUI/Inventory/Scripts/inventory_ui.gd" id="3_wlp85"]
[ext_resource type="Resource" uid="uid://cqeukq4gf601u" path="res://GUI/Inventory/player_inventory.tres" id="4_wlp85"]
[ext_resource type="FontFile" uid="uid://cc4owimmw7e3d" path="res://Fonts/ari-w9500-bold.ttf" id="6_2cw0n"]
[ext_resource type="PackedScene" uid="uid://bx3h406wgpg83" path="res://GUI/Inventory/Stats/stats.tscn" id="6_58q36"]
[ext_resource type="Script" uid="uid://dh04ovj0wsf36" path="res://GUI/Inventory/Quests/quests_ui.gd" id="7_m38iw"]
[ext_resource type="PackedScene" uid="uid://dqnutdbcsmtbt" path="res://GUI/Inventory/Quests/quest_item.tscn" id="7_qfjco"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wlp85"]
atlas = ExtResource("2_ewc0g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2cw0n"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
texture = SubResource("AtlasTexture_wlp85")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="Inventory" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_btv15")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_behavior_recursive = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -274.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.15686275, 0.14509805, 0.14117648, 0.77254903)

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 371.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -325.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Inventory" type="Control" parent="Control/TabContainer"]
layout_mode = 2
mouse_filter = 2
mouse_behavior_recursive = 1
metadata/_tab_index = 0

[node name="Label" type="Label" parent="Control/TabContainer/Inventory"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.031000001
anchor_right = 0.5
anchor_bottom = 0.031000001
offset_left = -183.0
offset_top = 5.0
offset_right = 178.0
offset_bottom = 26.0
text = "BLAZIN2180"
horizontal_alignment = 1

[node name="Stats" parent="Control/TabContainer/Inventory" instance=ExtResource("6_58q36")]
layout_mode = 0
offset_left = 61.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 187.0
mouse_filter = 1

[node name="Panel" type="PanelContainer" parent="Control/TabContainer/Inventory"]
layout_mode = 0
offset_left = 33.0
offset_top = 197.0
offset_right = 223.0
offset_bottom = 311.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_2cw0n")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/Panel"]
layout_mode = 2
columns = 5
script = ExtResource("3_wlp85")
data = ExtResource("4_wlp85")

[node name="InventorySlot" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2
focus_mode = 1
mouse_filter = 2

[node name="InventorySlot2" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/TabContainer/Inventory/Panel/GridContainer" instance=ExtResource("3_lgn1t")]
layout_mode = 2

[node name="ItemDescription" type="Label" parent="Control/TabContainer/Inventory"]
layout_mode = 0
offset_left = -103.0
offset_top = 520.0
offset_right = -11.0
offset_bottom = 627.0
theme_override_fonts/font = ExtResource("6_2cw0n")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 3
autowrap_mode = 3
justification_flags = 161
uppercase = true

[node name="Quests" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
script = ExtResource("7_m38iw")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_top = 6.0
offset_right = 368.0
offset_bottom = 630.0
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Quests/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="QuestItem" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qfjco")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2

[node name="QuestItem2" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qfjco")]
layout_mode = 2

[node name="QuestItem3" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qfjco")]
layout_mode = 2

[node name="QuestItem4" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qfjco")]
layout_mode = 2

[node name="QuestItem5" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qfjco")]
layout_mode = 2

[node name="QuestItem6" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qfjco")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.079
anchor_right = 0.5
anchor_bottom = 0.079
offset_left = -177.5
offset_top = -50.165
offset_right = 177.5
offset_bottom = 49.835

[node name="System" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/System"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 198.5
offset_right = 101.0
offset_bottom = 308.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Button_Load" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_2cw0n")
theme_override_font_sizes/font_size = 32
text = "Load"

[node name="Button_Exit" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_2cw0n")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="Label" type="Label" parent="Control/TabContainer/System"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -104.0
offset_right = 55.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("6_2cw0n")
text = "Game Paused"

[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/Button_Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/Button_Exit" to="." method="_on_button_exit_pressed"]
